--- a/views/select-bot.ejs
+++ b/views/select-bot.ejs
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Select a WhatsApp bot to deploy on Host.TalkDrove">
-    <title>Select Bot || H.TD</title>
+    <title>Select Bot || HACKLINK TECH.INC</title>
           <!-- Favicon and App Icons -->
           <link rel="apple-touch-icon" sizes="180x180" href="https://cdn.talkdrove.com/host/Images/favicon/apple-touch-icon.png">
           <link rel="icon" type="image/png" sizes="32x32" href="https://cdn.talkdrove.com/host/Images/favicon/favicon-32x32.png">
