--- a/views/deploy-bot.ejs
+++ b/views/deploy-bot.ejs
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Deploy your WhatsApp bot on Bot.TalkDrove">
-    <title>Deploy <%= bot.name %> - || H.TD</title>
+    <title>Deploy <%= bot.name %> - || HACKLINK TECH.INC</title>
           <!-- Favicon and App Icons -->
   <link rel="apple-touch-icon" sizes="180x180" href="https://cdn.talkdrove.com/host/Images/favicon/apple-touch-icon.png">
   <link rel="icon" type="image/png" sizes="32x32" href="https://cdn.talkdrove.com/host/Images/favicon/favicon-32x32.png">
